cleaned pom and other clarifications