@@ -19,20 +19,13 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <name>Your Name</name>
-            <email>your.email@example.com</email>
-            <organization>Example Inc.</organization>
-            <organizationUrl>http://www.example.com</organizationUrl>
-        </developer>
-    </developers>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+		<maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
         <junit.jupiter.version>6.0.1</junit.jupiter.version>
+		<versions.maven.plugin>2.19.1</versions.maven.plugin>		
     </properties>
 
     <dependencies>
@@ -42,6 +35,7 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+		
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -55,51 +49,13 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.10.0</version>
+                <version>${versions.maven.plugin}</version>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>24</source>
-                    <target>24</target>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.javadoc</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
+			
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.0</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>${maven.surefire.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
